Refactor: stabilize Realme 8 Pro camera framework for AOSP
- Purge all JADX-generated metadata and redundant str.hashCode() patterns
- Reconstruct VideoMode, NightMode, and PortraitMode for AOSP compliance
- Resolve inheritance conflicts and interface mismatches in BaseMode
- Standardize imports and remove decompiler artifacts across 20+ files
- Ensure strict compliance with AOSP framework types